# bkg.rs

./: .dockerignore  .gitignore  AGeNT.md  APPROVAL.md  APPROVAL_COMBINED.json  CODEX_SYSTEM_PROMPT.md  CORE_STRUCTURE.md  DOCKER.md  DOCKER_SETUP.md  DOWNLOAD_GUIDE.md  FINAL_SUMMARY.md  FOLDER_OVERVIEW.md  FOLDER_STRUCTURE_V0.2.md  PATCH_TROUBLESHOOTING.md  README.md  STRUCTURE_FINAL.md  TECH_STACK.md  V0.2_IMPLEMENTATION_GUIDE.md  docker-compose.yml  docker-start.sh  download-models.sh
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: ci-cleanup.yml
apps/bkg-api/: .eslintrc.js  package.json  tsconfig.json
apps/bkg-api/src/: app.module.ts  main.ts
apps/bkg-api/src/admin/: admin.controller.ts
apps/bkg-api/src/auth/: auth.controller.ts
apps/bkg-api/src/chat/: chat.controller.ts  dto.ts
apps/bkg-api/src/common/guards/: api-key.guard.spec.ts
apps/bkg-api/src/plugins/: plugin-bus.service.ts  plugin.module.ts  plugin.service.spec.ts  plugin.service.ts  plugin.types.ts  plugins.controller.ts
apps/bkg-api/src/storage/: database.service.ts
apps/bkg-web/: angular.json  package-lock.json  package.json  tailwind.config.js
apps/bkg-web/src/: index.html  styles.css
apps/bkg-web/src/app/: app-routing.module.ts  app.component.html
apps/bkg-web/src/app/models/: api.models.ts
apps/bkg-web/src/app/services/: api.service.ts  auth.service.ts
core/backend/gateway/: jest.config.ts  package-lock.json  package.json
core/backend/gateway/src/: app.module.ts  app.service.ts
core/backend/gateway/src/admin/: admin.controller.ts
core/backend/gateway/src/chat/: chat.controller.spec.ts
core/backend/gateway/src/goose/: goose.controller.ts
core/backend/gateway/src/health/: health.controller.ts
core/backend/gateway/src/plugins/: plugin-bus.service.ts  plugin.module.ts  plugin.service.ts  plugin.types.ts  plugins.controller.ts  plugins.gateway.ts
core/backend/gateway/src/storage/: database.service.ts
core/backend/gateway/src/types/: better-sqlite3.d.ts
core/config/: README.md
core/database/: README.md
core/frontend/admin-ui/: karma.conf.js
core/frontend/admin-ui/src/: main.ts
core/plugins/: plugins.json
core/plugins/apikeys/: bootstrap.js  config.json
core/plugins/apikeys/src/: index.js
core/plugins/brainml/: Cargo.toml  Dockerfile  OpenAPI.json  README.md  config.json
core/plugins/brainml/src/: lib.rs
core/plugins/brainml/src/adapters/: braindb.rs  mod.rs
core/plugins/brainml/src/api/: health.rs  index.rs  query.rs
core/plugins/brainml/src/core/: config.rs  scoring.rs
core/plugins/brainml/tests/: hybrid_query.rs  integration.rs
core/plugins/candle/: Cargo.toml  start.sh
core/plugins/goose/: Cargo.toml  config.json  start.sh
core/plugins/goose/src/: bus.rs  config.rs  main.rs  manager.rs  models.rs  telemetry.rs
core/plugins/llmserver/: Cargo.toml  config.json
core/plugins/llmserver/src/: main.rs
core/plugins/repoagent/: config.json  pyproject.toml  start.sh
core/plugins/repoagent/repoagent/: main.py
core/plugins/rustyface/: config.json  start.sh
core/plugins/rustyface/datasets/: default.json
core/plugins/rustyface/src/: main.rs
devops/.devcontainer/: devcontainer.json
devops/docker/: Dockerfile  docker-compose.yml  start.sh  supervisord.conf
devops/scripts/: docker-start.sh  download-models.sh
docker/: Dockerfile  start.sh  supervisord.conf
docs/: BKG_V0.2_COMPLETE_GUIDE.md  CORE_STRUCTURE.md  GIT_REDESIGN.md  INDEX.md  MAID_IMPLEMENTATION_PROMPT.md  README.md  REPOMOLE_IMPLEMENTATION_PROMPT.md  STRUCTURE_ANALYSIS.md  architecture.md  deployment.md  next.md  next_agent_memento.md  operations.md  plugins.md
docs/architecture/: plugin_system_v0.2.md
docs/changelog/: CHANGELOG.md
docs/featuers/: goose_feat.md
docs/features/: apikeys_feat.md  braindb_feat.md  brainml_feat.md  llm_paradise_feat.md  pgml_feat.md  repoagent_feat.md
docs/implementation/: angular_adminui_setup.md
docs/integration/: APIKEYS_AUTH_SYSTEM.md  PGML_BRAINML_INTEGRATION.md  patch-v0.2-complete.md  patch-v0.2.md
docs/plugin-guides/: apikeys.md  brainml.md  candle.md  llmserver.md  repoagent.md  rustyface.md
docs/plugins/: goose.md
docs/progression/: Statusbericht_Codex-System-Core_2025-10-21_04-35-55.md  Statusbericht_Codex-System-Core_2025-10-21_05-50-00.md  latest.json
docs/status/: Statusbericht_Codex-System-Core_2025-10-21_04-25-01.md  Statusbericht_Codex-System-Core_2025-10-21_04-35-55.md  Statusbericht_Codex-System-Core_2025-10-21_05-50-00.md
docs/update/: v0.1a.json  v0.1a.md  v0.2-phase1.md
models/: Qwen2-0.5B-Instruct-Q5_K_M.gguf  all-MiniLM-L6-v2-ggml-model-f16.gguf
plugins/: plugins.json
plugins/apikeys/: package.json  start.sh
plugins/brainml/: README.md  start.sh
plugins/brainml/src/: main.rs
plugins/brainml/src/adapters/: braindb.rs  llm.rs
plugins/brainml/src/api/: admin.rs  errors.rs  mod.rs  openapi.rs
plugins/brainml/src/core/: bus.rs  embeddings.rs  mod.rs  pipeline.rs  ranker.rs  retriever.rs  schema.rs
plugins/brainml/src/util/: id.rs  tracing.rs
plugins/candle/: config.json
plugins/candle/models/: sample-linear.json
plugins/candle/src/: main.rs
plugins/llmserver/: Cargo.toml  start.sh
plugins/repoagent/: config.json  pyproject.toml
plugins/rustyface/: Cargo.toml
scripts/: cleanup-workspace.sh
(+38 files in other folders)
