[package]
name = "bkg-llmserver"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "0.20"
url = "2.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
futures-util = "0.3"
rand = "0.8"
sha2 = "0.10"
base64 = "0.21"
anyhow = "1.0"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["clock"] }
uuid = { version = "1", features = ["v4"] }
