[package]
name = "bkg-rustyface"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["json"] }
base64 = "0.21"
futures-util = "0.3"
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "gif", "bmp", "ico", "pnm", "tiff"] }
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "signal"] }
tokio-tungstenite = "0.20"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
url = "2.4"
uuid = { version = "1", features = ["v4"] }
sysinfo = "0.30"
hex = "0.4"
sha2 = "0.10"
