[package]
name = "bkg-goose"
version = "0.1.0"
edition = "2021"
authors = ["bkg contributors"]
description = "BKG goose load-testing plugin runtime"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
hdrhistogram = "7.5"
once_cell = "1.18"
parking_lot = "0.12"
rand = { version = "0.8", features = ["small_rng"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "gzip", "brotli", "zstd", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.4", features = ["macros", "json"] }
sysinfo = { version = "0.30", features = ["serde"] }
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.20", default-features = false, features = ["rustls-tls-native-roots"] }
tokio-util = { version = "0.7", features = ["rt", "sync"] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
url = "2.4"
uuid = { version = "1.6", features = ["serde", "v4"] }
thiserror = "1.0"
