[project]
name = "bkg-repoagent"
version = "0.1.0"
description = "RepoAgent plug-in for bkg"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.109",
  "uvicorn[standard]>=0.24",
  "websockets>=12.0",
  "pydantic>=1.10,<2.0",
  "aiofiles>=23.2",
  "psutil>=5.9"
]

[project.scripts]
bkg-repoagent = "repoagent.main:run"
